--- a/index.html
+++ b/index.html
@@ -15,35 +15,43 @@
             cursor: pointer;
             transition: 0.8s;
             margin: 0 8px 8px 0;
+            text-align: center;
+            line-height: 100px;
         }
-        .circle{
-            background-color: pink;
+        .win{
+            background-color: green;
+            color: aliceblue;
             border-radius: 50%;
             transform: rotate(360deg);
         }
+        .lose{
+            transform: scale(0.9);
+            background-color: red;
+        }
+
     </style>
 </head>
-<div class="box" id="target1"></div>
-<div class="box" id="target2"></div>
-<div class="box" id="target3"></div>
-
+<body>
 <script>
     'use strict';
-    const target1 = document.getElementById('target1');
-    const target2 = document.getElementById('target2');
-    const target3 = document.getElementById('target3');
+    const num = 30;
+    const winner = Math.floor(Math.random() *num);
 
-    target1.addEventListener('click',() => {
-        target1.classList.toggle('circle');
-    });
-    target2.addEventListener('click',() => {
-        target2.classList.toggle('circle');
-    });
-    target3.addEventListener('click',() => {
-        target3.classList.toggle('circle');
-    });
+    for (let i = 0; i < num; i++) {
+        const div = document.createElement('div');
+        div.classList.add('box');
 
+        div.addEventListener('click', () => {
+            if (i === winner){
+                div.textContent = "win!";
+                div.classList.add('win');
+            }else{
+                div.textContent = "Lose..";
+                div.classList.add('lose');
+            }
+        });
+        document.body.appendChild(div);
+    }
 </script>
 </body>
 </html>
-<body>
